# private-scientific-rag

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml
docs/: README.md  chunking_modes.md  embedding_models.md  export_recreate.md  ollama_chat_models.md  public_repo_checklist.md
documents/: README.md
frontend/: README.md  index.html  package-lock.json  package.json
migrations/: README.md  env.py
mockups/: README.md  app.js  chat-workspace.html  document-manager.html  export-center.html  index.html  ingestion-source-viewer.html  package.json  playwright.config.ts  prompt-sandbox.html  recreate-repository.html  repository-dashboard.html  search-lab.html  settings-model-manager.html  styles.css  tsconfig.json
plans/: vector-search.md
prds/: 01-local-project-foundation.md  02-repository-settings-reproducibility.md  03-document-ingestion-source-inspection.md  04-full-text-search.md  05-vector-search-qdrant.md  06-hybrid-search-reranking.md  07-local-rag-chat-citations.md  08-prompt-sandbox-evaluation.md  09-export-import-recreate.md  10-structured-scientific-multimodal-parsing.md  11-chemistry-patent-extensions.md  12-bulk-patent-data-integration.md  13-ocr-page-image-text-recovery.md  14-structured-table-extraction.md  15-additional-embedding-models.md  16-immutable-embedding-indexes.md  17-search-metadata-quality-result-labeling.md  18-golden-evaluation-evidence-promotion.md  19-repository-admin-reset.md  20-repository-dashboard-home.md  21-settings-models-manager.md  22-ollama-chat-model-expansion.md  (+8 more)
(+133 files in other folders)
