[project]
name = "private-scientific-rag"
version = "0.1.0"
description = "Local-first multimodal scientific RAG workbench."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "alembic>=1.13.3",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "pydantic-settings>=2.5.2",
    "sqlalchemy>=2.0.35",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.8",
]

[project.urls]
Repository = "https://github.com/cander67/private-scientific-rag"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/private_rag"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".uv-cache",
    ".venv",
    "example_code",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = []

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=private_rag",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
markers = [
    "live: tests that require local services or models",
]
